HMAN-56 Retrieve lost endpoint code. Fix broken mocks from switching to component rather than inherited validators. *wip* Actuals tests need fixing